[package]
name = "zenpredict-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]
# Standalone — cargo-fuzz's RUSTFLAGS conflict with the zenanalyze
# workspace's release profile settings.

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
# Fuzz both default-features and --features compressed-weights via
# separate fuzz target invocations; depend on the feature here so
# the lz4 path is reachable when this fuzz crate is built with
# `--features compressed-weights`.
zenpredict = { path = "..", features = ["std", "advanced", "compressed-weights"] }

[[bin]]
name = "parser_from_bytes"
path = "fuzz_targets/parser_from_bytes.rs"
test = false
doc = false

[[bin]]
name = "lz4_decompress"
path = "fuzz_targets/lz4_decompress.rs"
test = false
doc = false

[[bin]]
name = "predictor_predict"
path = "fuzz_targets/predictor_predict.rs"
test = false
doc = false
